TODO:
* fix memory leaks
* libnk2_io_handle.c check if LIBNK2_VALUE_TYPE_BOOLEAN is working as intended
* item values
  - implement currency as: LIBFVALUE_VALUE_TYPE_FIXED_POINT_64BIT
    what about location of the point ?
* in io_handle_read_items used set array value instead of append ?

Optimizations:
* map (file offset and size) items and item values first read on demand ?
* pre allocate item array entries

library
* additional value type support functions
  - filetime
* what about multiple alias entries 0x6001 of a single item?
  - they are set in values table but identifier lookup will return first only
* local library support

Tools
* add signal handling
* nk2export
  - add export mode like pffexport
  - export alias files instead of item values
  - export to CSV/TSV, HTML, XML
* nk2info

Test:
* add autoconf/make test suite

Beta release
* have automated test suite
* remove deprecated functions in libnk2_legacy.[ch]
* remove deprecated definition in include/libnk2/mapi.h
* update man pages
* add documentation
* check inclusion of local libraries

Bindings:
* python
* .net
* java

20140324
* 2014 update
* updated dependencies

20130923
* updated msvscpp files
* worked on tests
* fixed support for codepages 949, 950, 1255

20130922
* updated dependencies

20130414
* updated dependencies
* textual changes

20130121
* 2013 update
* nk2export: added item file
* added API functions for item file
* updated dependencies
* updated macosx PackageMaker files
* updated msvscpp files
* bug fix in libnk2_item_get_entry_value_utf16_string API definition

20121112
* updated dependencies

20120826
* updated dependencies

20120522
* updated dependencies

20120102
* 2012 update
* added codepage windows 932 and 936 support

20111030
* updated configure.ac and m4 files
* updated common, libsystem, libfdatetime, libfvalue
* changes for libfvalue updates

20111007
* updated README
* updated libfdatetime
* updated msvscpp files for libfdatetime

20111006
* removed acinclude.m4
