@@ -7,70 +7,90 @@
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-
 %:
 	dh  $@
 
-install_libnk2:
-	# Set up libnk2 package directories and files
-	mkdir -p debian/libnk2/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so.*.*.* debian/libnk2/usr/lib
+.PHONY: override_dh_auto_configure
+override_dh_auto_configure:
+	dh_auto_configure -- --enable-python CFLAGS="-g"
 
-install_libnk2_dev:
-	# Set up libnk2-dev package directories and files
-	mkdir -p debian/libnk2-dev/usr/include
-	mkdir -p debian/libnk2-dev/usr/include/libnk2
-	mkdir -p debian/libnk2-dev/usr/lib
-	mkdir -p debian/libnk2-dev/usr/lib/pkgconfig
-	mkdir -p debian/libnk2-dev/usr/share/man/man3
-	install -p -m755 debian/tmp/usr/include/*.h debian/libnk2-dev/usr/include
-	install -p -m755 debian/tmp/usr/include/libnk2/*.h debian/libnk2-dev/usr/include/libnk2
-	install -p -m755 debian/tmp/usr/lib/*.la debian/libnk2-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.a debian/libnk2-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so debian/libnk2-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/pkgconfig/* debian/libnk2-dev/usr/lib/pkgconfig
-	install -p -m755 debian/tmp/usr/share/man/man3/* debian/libnk2-dev/usr/share/man/man3
-
-install_libnk2_tools:
-	# Set up libnk2-tools package directories and files
-	mkdir -p debian/libnk2-tools/usr/bin
-	mkdir -p debian/libnk2-tools/usr/share/man/man1
-	install -p -m755 debian/tmp/usr/bin/* debian/libnk2-tools/usr/bin
-	install -p -m755 debian/tmp/usr/share/man/man1/* debian/libnk2-tools/usr/share/man/man1
-
+.PHONY: override_dh_auto_test
 override_dh_auto_test:
 
-override_dh_installinit: install_libnk2 install_libnk2_dev install_libnk2_tools
+.PHONY: override_dh_install
+override_dh_install:
+	# Create the libnk2 package.
+	dh_install "debian/tmp/usr/lib/lib*.so.*.*.*" -p libnk2
+	# Create the libnk2-dev package.
+	dh_install "debian/tmp/usr/include/*.h" -p libnk2-dev
+	dh_install "debian/tmp/usr/include/lib*/*.h" -p libnk2-dev
+	dh_install "debian/tmp/usr/lib/*.a" -p libnk2-dev
+	dh_install "debian/tmp/usr/lib/*.la" -p libnk2-dev
+	dh_install "debian/tmp/usr/lib/*.so" -p libnk2-dev
+	dh_install "debian/tmp/usr/lib/pkgconfig/*" -p libnk2-dev
+	dh_install "debian/tmp/usr/share/man/man3/*" -p libnk2-dev
+	# Create the libnk2-tools package.
+	dh_install "debian/tmp/usr/bin/*" -p libnk2-tools
+	dh_install "debian/tmp/usr/share/man/man1/*" -p libnk2-tools
+	# Create the libnk2-python package.
+	dh_install -X"*_d.so" "debian/tmp/usr/lib/python*/*" -p libnk2-python
+	# The libnk2-dbg and libnk2-python-dbg packages are created by dh_strip.
+	dh_install
 
+.PHONY: override_dh_installmenu
 override_dh_installmenu:
 
+.PHONY: override_dh_installmime
 override_dh_installmime:
 
+.PHONY: override_dh_installmodules
 override_dh_installmodules:
 
+.PHONY: override_dh_installlogcheck
 override_dh_installlogcheck:
 
+.PHONY: override_dh_installlogrotate
 override_dh_installlogrotate:
 
+.PHONY: override_dh_installpam
 override_dh_installpam:
 
+.PHONY: override_dh_installppp
 override_dh_installppp:
 
+.PHONY: override_dh_installudev
 override_dh_installudev:
 
+.PHONY: override_dh_installwm
 override_dh_installwm:
 
+.PHONY: override_dh_installxfonts
 override_dh_installxfonts:
 
+.PHONY: override_dh_gconf
 override_dh_gconf:
 
+.PHONY: override_dh_icons
 override_dh_icons:
 
+.PHONY: override_dh_perl
 override_dh_perl:
 
+.PHONY: override_dh_pysupport
+override_dh_pysupport:
+
+.PHONY: override_dh_strip
+override_dh_strip:
+ifeq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
+	dh_strip -plibnk2 --dbg-package=libnk2-dbg
+	dh_strip -plibnk2-python --dbg-package=libnk2-python-dbg
+endif
+
+.PHONY: override_dh_shlibdeps
 override_dh_shlibdeps:
 	dh_shlibdeps -Llibnk2 -l${PWD}/debian/tmp/usr/lib
 
+.PHONY: override_dh_makeshlibs
 override_dh_makeshlibs:
 	dh_makeshlibs -Xlibnk2-dev
 
