@@ -1,0 +1,51 @@
+[Project]
+name: "libnk2"
+status: "alpha"
+features: [
+    "debug_output", "tests", "tools", "python",
+    "source_package",
+    "cygwin", "gcc", "mingw", "msvscpp",
+    "dpkg", "rpm"]
+
+[source_package]
+url: "https://googledrive.com/host/0B3fBvzttpiiSZFNVS2JjWkNnelk/"
+
+[git]
+url: "https://code.google.com/p/libnk2/"
+
+[tests]
+features: ["valgrind"]
+profiles: ["libnk2", "pynk2", "nk2export", "nk2info"]
+example_filename1: "Outlook.NK2"
+example_filename2: "Outlook1.NK2"
+
+[tools]
+directory: "nk2tools"
+names: ["nk2export", "nk2info"]
+
+[cygwin]
+build_dependencies: []
+dll_dependencies: [
+    "*TODO describe dependencies*"]
+dll_filename: "cygnk2-0.dll"
+
+[gcc]
+build_dependencies: []
+static_build_dependencies: []
+
+[mingw]
+build_dependencies: []
+dll_dependencies: [
+    "*TODO describe dependencies*"]
+dll_filename: "libnk2-1.dll"
+
+[msvscpp]
+build_dependencies: []
+dll_dependencies: []
+
+[dpkg]
+build_dependencies: []
+
+[rpm]
+build_dependencies: []
+
