@@ -29,11 +29,20 @@ Requires: libnk2 = %{version}-%{release}
 %description tools
 Several tools for reading Nickfiles (NK2)
 
+%package python
+Summary: Python bindings for libnk2
+Group: System Environment/Libraries
+Requires: libnk2 = %{version}-%{release} python
+BuildRequires: python-devel
+
+%description python
+Python bindings for libnk2
+
 %prep
 %setup -q
 
 %build
-%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir}
+%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python
 make %{?_smp_mflags}
 
 %install
@@ -68,6 +77,13 @@ rm -rf ${RPM_BUILD_ROOT}
 %attr(755,root,root) %{_bindir}/nk2export
 %attr(755,root,root) %{_bindir}/nk2info
 %{_mandir}/man1/*
+
+%files python
+%defattr(644,root,root,755)
+%doc AUTHORS COPYING NEWS README
+%{_libdir}/python*/site-packages/*.a
+%{_libdir}/python*/site-packages/*.la
+%{_libdir}/python*/site-packages/*.so
 
 %changelog
 * @SPEC_DATE@ Joachim Metz <joachim.metz@gmail.com> @VERSION@-1
